--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
-  "name": "feqa",
-  "version": "0.0.1",
-  "description": "Frontend QA Pipeline",
-  "main": "index.js",
-  "author": "Edmonds Commerce",
-  "license": "MIT"
+    "name": "feqa",
+    "version": "0.0.1",
+    "description": "Frontend QA Pipeline",
+    "repository": "https://github.com/edmondscommerce/feqa",
+    "main": "index.js",
+    "author": "Edmonds Commerce",
+    "license": "MIT",
+    "bin": {
+        "feqa": "./bin/feqa.js"
+    },
+    "dependencies": {},
+    "devDependencies": {
+        "eslint": "^5.16.0",
+        "eslint-config-google": "^0.13.0",
+        "eslint-config-standard": "^12.0.0",
+        "eslint-plugin-import": "^2.17.2",
+        "eslint-plugin-node": "^9.0.1",
+        "eslint-plugin-promise": "^4.1.1",
+        "eslint-plugin-standard": "^4.0.0"
+    }
 }
