--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "bin": {
         "feqa": "./bin/feqa.js"
     },
-    "dependencies": {},
+    "dependencies": {
+        "eslint-config-prettier": "^4.3.0",
+        "eslint-plugin-prettier": "^3.1.0",
+        "prettier": "^1.17.1"
+    },
     "devDependencies": {
         "eslint": "^5.16.0",
         "eslint-config-google": "^0.13.0",
