--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-prettier": "^3.1.0",
+        "eslint-plugin-vue": "^5.2.2",
         "prettier": "^1.17.1"
     }
 }
