--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-vue": "^5.2.2",
-        "prettier": "^1.17.1"
+        "prettier": "^1.17.1",
+        "tslint": "^5.16.0",
+        "typescript": "^3.4.5"
     }
 }
