--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
         "feqa": "bin/feqa"
     },
     "dependencies": {
+        "@typescript-eslint/eslint-plugin": "^1.9.0",
+        "@typescript-eslint/parser": "^1.9.0",
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-vue": "^5.2.2",
-        "prettier": "^1.17.1",
-        "tslint": "^5.16.0",
+        "prettier": "^1.17.1"
+    },
+    "dev": {
         "typescript": "^3.4.5"
     }
 }
