--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
         "@types/jest": "^24.0.13",
         "@typescript-eslint/eslint-plugin": "^1.9.0",
         "@typescript-eslint/parser": "^1.9.0",
+        "@vue/test-utils": "^1.0.0-beta.29",
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.3.0",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-vue": "^5.2.2",
         "jest": "^24.8.0",
         "prettier": "^1.17.1",
-        "ts-jest": "^24.0.2"
+        "ts-jest": "^24.0.2",
+        "vue-jest": "^3.0.4"
     },
     "dev": {
         "typescript": "^3.4.5"
