--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-vue": "^5.2.2",
         "jest": "^24.8.0",
+        "mocha": "^6.1.4",
+        "mocha-webpack": "^1.1.0",
         "prettier": "^1.17.1",
         "ts-jest": "^24.0.2",
         "vue-jest": "^3.0.4"
