--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@vue/test-utils": "^1.0.0-beta.29",
         "eslint": "^5.16.0",
         "eslint-config-prettier": "^4.3.0",
+        "eslint-plugin-jest": "^22.5.1",
         "eslint-plugin-prettier": "^3.1.0",
         "eslint-plugin-vue": "^5.2.2",
         "jest": "^24.8.0",
